--- a/Zabor/Views/Fences/Cement.cshtml
+++ b/Zabor/Views/Fences/Cement.cshtml
@@ -24,7 +24,7 @@
 <div class="">
 
 
-    <h1>Бетонные заборы. Плиты</h1>
+    <h1>Плиты для бетонных заборов</h1>
 
 
     <p>Бетонные заборы&nbsp;—&nbsp;это самый популярный вариант установить красивое и надежное ограждение для вашего участка.</p>
@@ -509,7 +509,7 @@
 <div class="content">
 
 
-    <h1>Бетонные заборы.Столбы</h1>
+    <h1>Столбы для бетонных заборов</h1>
 
     <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
         <div class="col-sm-6 col-md-4">
@@ -637,7 +637,7 @@
 <div class="content">
 
 
-    <h1>Бетонные заборы. Крышки</h1>
+    <h1>Крышки для бетонных заборов</h1>
 
     <div style="display: flex; flex-direction: row; flex-wrap: wrap;">
         <div class="col-sm-6 col-md-4">
