--- a/Zabor/Views/Fences/SheetMetal.cshtml
+++ b/Zabor/Views/Fences/SheetMetal.cshtml
@@ -14,9 +14,7 @@
     <h1>Заборы из профлиста</h1>
 
 
-    <p class="MsoNormal"><strong>Заборы из профлиста&nbsp;—&nbsp;это современное решение старых проблем.</strong></p>
-    <p class="MsoNormal">Такое ограждение внешне стильно выглядит, обладает высокой прочностью и невысокой ценой.<span style="mso-spacerun:yes">&nbsp; </span>Если вы хотите оградить себя и свой участок от посторонних взглядов, то заборы из профнастила- это отличный вариант. Вы сможете подобрать цет и фактуру забора так, чтобы ваш забор гармонично сочетался с вашим коттеджем или дачей. За ним не нужен никакой уход и срок службы не ограничен, так как забор состоит из высокопрочных и долговечных материалов.</p>
-    <p class="MsoNormal">Заборы из профлиста настолько популярны, что их востребованности можно позавидовать.</p>
+    <p>В нашей компании Вы также можете заказать заборы из профлиста, которые являются наиболее распространенными среди ограждений для дачных участков. Надежность, прочность, долговечность, современность являются основными преимуществами заборов из профнастила.  Широкое разнообразие цветовой гаммы позволит Вам подобрать ограждение, которое будет сочетаться с цветом кровли или общей цветовой гаммой участка.</p>
 
     <div class="row">
         <div class="col-sm-6 col-md-4">
