--- a/Zabor/Views/Montage/Index.cshtml
+++ b/Zabor/Views/Montage/Index.cshtml
@@ -21,23 +21,15 @@
     <p>Процесс монтажа включает в себя несколько этапов. Первый этап представляет собой замер участка, на котором будет производиться установка железобетонного забора. От точности замера зависит расход материалов и время выполнения установки, поэтому этот этап является важным для наших специалистов при выполнении полученного заказа.</p>
     <p>После того, как высота и форма забора будет окончательно выбрана, рабочие подготавливают участок для установки столбов. Для каждого столба формируется «яма», глубиной в 80 см. Далее для дополнительной устойчивости, камни или битый кирпич кладут в «яму», засыпают песком, после чего сверху заливают бетоном</p>
     <p>На последнем этапе визуально просматривают и устраняют разгул столбов, если он есть. Монтируют оставшиеся ряды таким же способом.</p>
-    <p><u>Существует 2 способа монтажа бетонных плит:</u></p>
-    <table>
-        <tbody>
-            <tr>
-                <td width="8%"><span style="font-size: xx-large;  ">1.</span></td>
-                <td>
-                    <p style="background-color: #cccccc; padding:8px;">Cразу устанавливаются все столбы, а плиты просто «закидываются » через верх. Такой способ требует точного расчета расстояния между столбами и хорошей физической подготовки &nbsp;рабочих, так как одна плита весит в среднем &nbsp;75 кг.</p>
-                </td>
-            </tr>
-            <tr>
-                <td><span style="font-size: xx-large;  ">2.</span></td>
-                <td>
-                    <p style="background-color: #cccccc; padding:8px;">Устанавливается первый столб, затем &nbsp;монтируются все плиты пролета. Второй столб, &nbsp;находясь в еще незабетонированном «колодце» как бы «натаскивается» на данную конструкцию.</p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+    
+    <div class="list-group">
+        <a href="#" class="list-group-item disabled">
+            2 способа монтажа бетонных плит
+        </a>
+        <a href="#" class="list-group-item">Cразу устанавливаются все столбы, а плиты просто «закидываются » через верх. Такой способ требует точного расчета расстояния между столбами и хорошей физической подготовки &nbsp;рабочих, так как одна плита весит в среднем &nbsp;75 кг.</a>
+        <a href="#" class="list-group-item">Устанавливается первый столб, затем &nbsp;монтируются все плиты пролета. Второй столб, &nbsp;находясь в еще незабетонированном «колодце» как бы «натаскивается» на данную конструкцию.</a>
+    </div>
+    
     <p>
         <a class="gallery" title="монтаж бетонного забора" href="/images/montage/1.jpg" rel="gallery">
             <img width="200" height="140" align="right" style="margin-left: 8px; border: 2px #373737 solid;" alt="монтаж бетонного забора" src="/images/montage/1.jpg">
