--- a/Zabor/Views/Production/Index.cshtml
+++ b/Zabor/Views/Production/Index.cshtml
@@ -14,25 +14,36 @@
 
 
     <p>Наша компания является одним из лидеров в Брянске и Брянской области по производству и установке декоративных железобетонных заборов. В нашей компании вы неизменно получите:</p>
-    <p>
-        <span style="font-size: smaller; "><em>—&nbsp; оптимальные цен;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;короткие сроки производства;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp;высокое качество.</em></span>
-        <span style="font-size: smaller; "><em>—&nbsp;индивидуальность конструкци.</em></span>
-    </p>
+    <div class="row">
+        <div class="col-md-6">
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-success">оптимальные цены</li>
+                <li class="list-group-item list-group-item-warning">короткие сроки производства</li>
+                <li class="list-group-item list-group-item-success">высокое качество</li>
+                <li class="list-group-item list-group-item-warning">индивидуальность конструкци</li>
+            </ul>
+        </div>
+    </div>
+
     <p>На протяжении многих лет при изготовлении заборов мы используем только качественное сырье, которое наша компания приобретает у надежных производителей, имеющих безупречную репутацию на рынке строительных материалов. Благодаря многолетнему опыту работы и современным технологиям, мы увеличиваем эффективность нашего производства, что позволяет улучшать технические показатели наших товаров, а также уменьшать цену продажи для наших клиентов.</p>
-    
+
     <p>Наша компания регулярно отслеживает новые технологии и материалы, необходимые для производства железобетонных изделий.</p>
 
-   
+
     <p>Непосредственно технологический процесс изготовления состоит из определенной последовательности действий:</p>
 
-    <p>
-        <span style="font-size: smaller; "><em>—&nbsp; создание бетонной смеси;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp; армирование железобетонных изделий;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp; формовка;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp; затвердевание;</em></span><br>
-        <span style="font-size: smaller; "><em>—&nbsp; обработка поверхности готовых ЖБИ;</em></span><br>
-    </p>
+
+    <div class="row">
+        <div class="col-md-6">
+            <ul class="list-group">
+                <li class="list-group-item list-group-item-success">создание бетонной смеси</li>
+                <li class="list-group-item list-group-item-warning">армирование железобетонных изделий</li>
+                <li class="list-group-item list-group-item-success">формовка</li>
+                <li class="list-group-item list-group-item-warning">затвердевание</li>
+                <li class="list-group-item list-group-item-success">обработка поверхности готовых ЖБИ</li>
+                
+            </ul>
+        </div>
+    </div>
 
 </div>
