--- a/Zabor/Views/Products/Index.cshtml
+++ b/Zabor/Views/Products/Index.cshtml
@@ -18,7 +18,46 @@
     <p>Для придания уникального вида вашему интерьеру, предлагаем Вам ознакомиться с широким спектром позиций в разделе «Ковка» на нашем сайте. Изделия из металла выглядят утонченно и изыскано, вот почему мимо такой красоты сложно пройти мимо.</p>
    
     
- 
+    <section class="bg-light" id="portfolio">
+        <div class="">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xs-6 col-md-4">
+                    <a href="/Products/Gates" class="thumbnail">
+                        <img src="/images/gates/2.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="/Products/Forge" class="thumbnail">
+                        <img src="/images/forge/1.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="/Fences/Cement" class="thumbnail">
+                        <img src="~/images/bg-header.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="GargenPark/Benches" class="thumbnail">
+                        <img src="/images/benches/5.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="GargenPark/Canopies" class="thumbnail">
+                        <img src="/images/canopies/1.jpg" alt="...">
+                    </a>
+                </div>
+                <div class="col-xs-6 col-md-4">
+                    <a href="/Fences/Cement" class="thumbnail">
+                        <img src="~/images/File0014_01.jpg" alt="...">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 </div>
