--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -77,7 +77,7 @@
                         <ul class="dropdown-menu">
                             <li><a asp-area="" asp-controller="Home" asp-action="About">О компании</a></li>
                             <li><a asp-area="" asp-controller="Home" asp-action="Contact">Контакты</a></li>
-                            <li><a asp-area="" asp-controller="Home" asp-action="Feedback">Обратная связь</a></li>
+                            @*<li><a asp-area="" asp-controller="Home" asp-action="Feedback">Обратная связь</a></li>*@
                         </ul>
                     </li>
                 </ul>
