--- a/Zabor/Views/Fences/SheetMetal.cshtml
+++ b/Zabor/Views/Fences/SheetMetal.cshtml
@@ -47,6 +47,43 @@
                 <img src="/images/sheetMetal/6.jpg" alt="...">
             </div>
         </div>
+        
+
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/7.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/8.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/9.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/10.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/11.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/12.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/13.jpg" alt="...">
+            </div>
+        </div>
     </div>
 
   
