--- a/Zabor/Views/Home/Contact.cshtml
+++ b/Zabor/Views/Home/Contact.cshtml
@@ -16,64 +16,14 @@
         Для связи с нами используйте, расположенные ниже, контактные<br>
         данные:
     </p>
-    <p>Адрес: г. Брянск, ул. Речная, 35</p>
-    <p>Телефон:<span style="font-size:21px; color:#373737;"> +7 (910) 330-49-55</span></p>
-    <p>Телефон:<span style="font-size: 21px; color: rgb(55, 55, 55);">&nbsp;+7 (910) 330-99-58</span></p>
-    <p>Телефон:<span style="font-size: 21px; color: rgb(55, 55, 55);">&nbsp;+7 (953) 297-69-10</span></p>
-    <p>E-mail: <a href="/back/">bryanskzabor@gmail.com</a></p>
-
-    <p>
-        @*<script type="text/javascript">
-            YMaps.jQuery(window).load(function () {
-                var map = new YMaps.Map(YMaps.jQuery("#YMapsID-2332")[0]);
-                map.setCenter(new YMaps.GeoPoint(34.400942, 53.265637), 15, YMaps.MapType.MAP);
-                map.addControl(new YMaps.Zoom());
-                map.addControl(new YMaps.ToolBar());
-                YMaps.MapType.PMAP.getName = function () { return "Народная"; };
-                map.addControl(new YMaps.TypeControl([
-                    YMaps.MapType.MAP,
-                    YMaps.MapType.SATELLITE,
-                    YMaps.MapType.HYBRID,
-                    YMaps.MapType.PMAP
-                ], [0, 1, 2, 3]));
-
-                YMaps.Styles.add("constructor#pmlbmPlacemark", {
-                    iconStyle: {
-                        href: "http://api-maps.yandex.ru/i/0.3/placemarks/pmlbm.png",
-                        size: new YMaps.Point(28, 29),
-                        offset: new YMaps.Point(-8, -27)
-                    }
-                });
+    <p>Адрес: г. Брянск, ул. Речная, 41</p>
+    <p>Телефон:<span style="font-size:21px; color:#373737;"> +7 (910) 33-11-433</span></p>
+    <p>Телефон:<span style="font-size: 21px; color: rgb(55, 55, 55);"> 370490</span></p>
+    <p>E-mail: <a href="/back/">viktor.bubnenko@mail.ru </a></p>
 
 
-                YMaps.Styles.add("constructor#FF3732c85Polyline", {
-                    lineStyle: {
-                        strokeColor: "FF3732c8",
-                        strokeWidth: 5
-                    }
-                });
-                map.addOverlay(createObject("Placemark", new YMaps.GeoPoint(34.39708, 53.267413), "constructor#pmlbmPlacemark", "ул. Речная, 35<br/>Производство и установка декоративных железобетонных заборов"));
-                map.addOverlay(createObject("Polyline", [new YMaps.GeoPoint(34.405449, 53.262241), new YMaps.GeoPoint(34.403346, 53.262781), new YMaps.GeoPoint(34.399054, 53.265637), new YMaps.GeoPoint(34.397767, 53.267335)], "constructor#FF3732c85Polyline", "Путь от жд вокзала \"Брянск 1\" в сторону Бежицкого района "));
-
-                function createObject(type, point, style, description) {
-                    var allowObjects = ["Placemark", "Polyline", "Polygon"],
-                        index = YMaps.jQuery.inArray(type, allowObjects),
-                        constructor = allowObjects[(index == -1) ? 0 : index];
-                    description = description || "";
-
-                    var object = new YMaps[constructor](point, { style: style, hasBalloon: !!description });
-                    object.description = description;
-
-                    return object;
-                }
-            });
-        </script>*@
-    </p>
-    <div id="map" style="width:524px;height:423px" ></div>
-
-
-
-
+    <div id="map" style="width:524px;height:423px"></div>
+    
 </div>
 
 <script>
