--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -146,8 +146,9 @@
     </div>
    
     <div class="footer-order">
-        <div class="footer-email"><i class="fa fa-envelope"></i> bryanskzabor@gmail.com</div>
-        <div class="footer-phone"><i class="fa fa-phone"></i> +7 910 330-49-55</div>
+        <div class="footer-email"><i class="fa fa-envelope"></i> viktor.bubnenko@mail.ru </div>
+        <div class="footer-phone"><i class="fa fa-phone"></i> +7 910 33-11-433 </div>
+        <div class="footer-phone"><i class="fa fa-phone"></i> 370490 </div>
 
         <div class="footer-link"><a asp-controller="Home" asp-action="Contact">Контакты</a></div>
         @*<div class="footer-link"><a href="/privacy_policy/">Политика конфиденциальности</a></div>*@
