--- a/Zabor/Views/GargenPark/Canopies.cshtml
+++ b/Zabor/Views/GargenPark/Canopies.cshtml
@@ -22,11 +22,11 @@
                 <img src="/images/canopies/1.jpg" alt="...">
             </div>
         </div>
-        <div class="col-sm-6 col-md-4">
+        @*<div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/canopies/2.jpg" alt="...">
             </div>
-        </div>
+        </div>*@
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/canopies/3.jpg" alt="...">
