--- a/Zabor/Views/Fences/Cement.cshtml
+++ b/Zabor/Views/Fences/Cement.cshtml
@@ -693,7 +693,7 @@
                 <img src="/images/fenceCovers/lev.jpg" alt="...">
                 <div class="caption">
                     <h3>Лев</h3>
-                    <p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>
+                    @*<p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>*@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">700 <i class="fa fa-rub" aria-hidden="true"></i></span>
@@ -708,7 +708,7 @@
                 <img src="/images/fenceCovers/orel.jpg" alt="...">
                 <div class="caption">
                     <h3>Орел</h3>
-                    <p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>
+                    @*<p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>*@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">1000 <i class="fa fa-rub" aria-hidden="true"></i></span>
@@ -723,7 +723,7 @@
                 <img src="/images/fenceCovers/har.jpg" alt="...">
                 <div class="caption">
                     <h3>Шар</h3>
-                    <p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>
+                    @*<p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>*@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">150 <i class="fa fa-rub" aria-hidden="true"></i></span>
@@ -738,7 +738,7 @@
                 <img src="/images/fenceCovers/travn.png" alt="...">
                 <div class="caption">
                     <h3>Травница</h3>
-                    <p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>
+                    @*<p>Используется в "каменной композиции"( сочетается с плитами № 23 и № 24).</p>*@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">180 <i class="fa fa-rub" aria-hidden="true"></i></span>
