--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -7,61 +7,119 @@
 <style>
 
 
-     header.masthead {
-         text-align: center;
-         color: #fff;
-         background-image: url(https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg);
-         background-repeat: no-repeat;
-         background-attachment: scroll;
-         background-position: center center;
-         -webkit-background-size: cover;
-         -moz-background-size: cover;
-         -o-background-size: cover;
-         background-size: cover;
-     }
-
-    header.masthead .intro-text {
-        padding-top: 120px;
-        padding-bottom: 70px;
+    header.masthead {
+        text-align: center;
+        color: #fff;
+        background-image: url(https://i.ytimg.com/vi/Z3KQHPVd74k/maxresdefault.jpg);
+        background-repeat: no-repeat;
+        background-attachment: scroll;
+        background-position: center center;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+        background-size: cover;
     }
 
-    header.masthead .intro-text .intro-lead-in {
-        font-size: 50px;
-        font-style: italic;
-        line-height: 40px;
-        margin-bottom: 25px;
-        font-family: 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;}
+        header.masthead .intro-text {
+            padding-top: 120px;
+            padding-bottom: 70px;
+        }
 
-    header.masthead .intro-text .intro-heading {
-        font-size: 50px;
-        font-weight: 700;
-        line-height: 75px;
-        margin-bottom: 50px;
-        font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;}
+            header.masthead .intro-text .intro-lead-in {
+                font-size: 50px;
+                font-style: italic;
+                line-height: 40px;
+                margin-bottom: 25px;
+                font-family: 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;
+            }
+
+            header.masthead .intro-text .intro-heading {
+                font-size: 50px;
+                font-weight: 700;
+                line-height: 75px;
+                margin-bottom: 50px;
+                font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
+            }
 
     .intro-text a {
         background-color: #2b9;
         color: white;
     }
+
         .intro-text a:hover, .intro-text a:focus {
             background-color: #34425C;
-            color:white;
+            color: white;
         }
+
+
+    .carousel-caption {
+        font-weight: bold;
+        font-size: 30px;
+    }
 </style>
 
-<header class="masthead" style="margin-top: 30px;">
-    <div class="">
-        <div class="intro-text">
-            <div style="margin-bottom:70px;" class="intro-lead-in">Надежная защита вашего уюта!</div>
-            <a class="btn btn-lg text-uppercase" asp-controller="Fences" asp-action="Cement">Подробнее</a>
+@*<header class="masthead" style="margin-top: 30px;">
+        <div class="">
+            <div class="intro-text">
+                <div style="margin-bottom:70px;" class="intro-lead-in">Надежная защита вашего уюта!</div>
+                <a class="btn btn-lg text-uppercase" asp-controller="Fences" asp-action="Cement">Подробнее</a>
+            </div>
         </div>
+    </header>*@
+
+
+<div id="carousel-example-generic" class="carousel slide" data-ride="carousel" style="max-width: 600px; width: 100%; margin: auto;">
+    <!-- Indicators -->
+    <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+    </ol>
+
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner" role="listbox">
+        <div class="item active">
+            <img src="/images/1.jpg" alt="...">
+            <div class="carousel-caption" style="color: #34425C;">
+                Быстро изготовим
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/2.jpg" alt="...">
+            <div class="carousel-caption" style="color: #34425C;">
+                Качественно установим
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/3.jpg" alt="...">
+            <div class="carousel-caption" style="color: #34425C;">
+                Дом защитим
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/4.jpg" alt="...">
+            <div class="carousel-caption" style="color: #2b9;">
+                Красотою удивим!
+            </div>
+        </div>
+
+
     </div>
-</header>
+
+    <!-- Controls -->
+    <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+        @*<i class="fa fa-chevron-left" aria-hidden="true"></i>*@
+    </a>
+    <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+        @*<i class="fa fa-chevron-right" aria-hidden="true"></i>*@
+    </a>
+</div>
 
 
 @*<div>
-    <img src="https://loorn.ru/media/img/bg.png" style="width: 100%;" />
-</div>*@
+        <img src="https://loorn.ru/media/img/bg.png" style="width: 100%;" />
+    </div>*@
 
 
 
