--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -6,10 +6,10 @@
     <title>@ViewData["Title"] | Zabor</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.gif" />
-    
+
     <meta name="description" content="@ViewData["MetaDescription"]">
     <meta name="keywords" content="@ViewData["MetaKeywords"]">
-    
+
     <link href="/fonts/Pacifico-font.css" rel="stylesheet">
 
     <environment include="Development">
@@ -26,7 +26,7 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top navbar-main">
+    <nav style="padding-top: 10px; min-height: 70px;" class="navbar navbar-inverse navbar-fixed-top navbar-main">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -42,36 +42,25 @@
                     <li><a asp-area="" asp-controller="Products" asp-action="Index">Продукция</a></li>
                     <li><a asp-area="" asp-controller="Montage" asp-action="Index">Монтаж</a></li>
                     <li><a asp-area="" asp-controller="Production" asp-action="Index">Производство</a></li>
-                    @*<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Заборы <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="Fences" asp-action="Cement">Бетонные заборы</a></li>
-                            <li><a asp-area="" asp-controller="Fences" asp-action="SheetMetal">Профлист</a></li>
-                            <li><a asp-area="" asp-controller="Fences" asp-action="Slave">Рабица</a></li>
-                        </ul>
-                    </li>*@
-                    @*<li><a asp-area="" asp-controller="Products" asp-action="Gates">Ворота</a></li>
-                    <li><a asp-area="" asp-controller="Products" asp-action="Forge">Ковка</a></li>
-                    <li><a asp-area="" asp-controller="Products" asp-action="Doors">Двери</a></li>*@
-                    @*<li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Сад и парк <span class="caret"></span></a>
-                        <ul class="dropdown-menu">
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Tables">Столы</a></li>
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Chairs">Стулья</a></li>
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Benches">Скамейки</a></li>
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Chargrills">Мангалы</a></li>
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Visors">Козырьки</a></li>
-                            <li><a asp-area="" asp-controller="GargenPark" asp-action="Canopies">Навесы</a></li>
-                        </ul>
-                    </li>*@
-                    @*<li><a asp-area="" asp-controller="Photogallery" asp-action="Index">Галерея</a></li>*@
-                    <li><a asp-area="" asp-controller="Calculator" asp-action="Index">
-                        <i style="position: absolute;font-size: 23px" class="fa fa-2x fa-calculator" aria-hidden="true"></i>
-                    </a></li>
+                    <li>
+                        <a style="padding-top: 4px;">
+                            <div>
+                                <span style="font-size: 15px; color: rgba(255, 255, 255, 0.75) !important;">Брянск и Брянская область</span>
+                            </div>
+                            <div>
+                                <span>+7 910 33-11-433 </span> <span style="margin-left: 30px;">370490</span>
+                            </div>
+                        </a>
+                    </li>
 
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <a style="margin-right: 20px;" asp-area="" asp-controller="Calculator" asp-action="Index">
+                            <i style="position: absolute;font-size: 23px" class="fa fa-2x fa-calculator" aria-hidden="true"></i>
+                        </a>
+                    </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Компания <span class="caret"></span></a>
                         <ul class="dropdown-menu">
@@ -91,20 +80,20 @@
                 <div class="col-md-3">
                     <ul style="margin-top: 30px;" class="nav nav-pills nav-stacked">
                         @*<li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Заборы <span class="caret"></span></a>
-                            <ul class="dropdown-menu">
-                                <li><a asp-area="" asp-controller="Fences" asp-action="Cement">Бетонные заборы</a></li>
-                                <li><a asp-area="" asp-controller="Fences" asp-action="SheetMetal">Профлист</a></li>
-                                <li><a asp-area="" asp-controller="Fences" asp-action="Slave">Рабица</a></li>
-                            </ul>
-                        </li>*@
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Заборы <span class="caret"></span></a>
+                                <ul class="dropdown-menu">
+                                    <li><a asp-area="" asp-controller="Fences" asp-action="Cement">Бетонные заборы</a></li>
+                                    <li><a asp-area="" asp-controller="Fences" asp-action="SheetMetal">Профлист</a></li>
+                                    <li><a asp-area="" asp-controller="Fences" asp-action="Slave">Рабица</a></li>
+                                </ul>
+                            </li>*@
                         <li class="navbar_label">
                             <a href="#" class="navbar_label-name">Заборы</a>
                         </li>
                         <li><a asp-area="" asp-controller="Fences" asp-action="Cement">Бетонные заборы</a></li>
                         <li><a asp-area="" asp-controller="Fences" asp-action="SheetMetal">Профлист</a></li>
                         <li><a asp-area="" asp-controller="Fences" asp-action="Slave">Рабица</a></li>
-                        
+
                         <li class="navbar_label">
                             <a href="#" class="navbar_label-name">Изделия из металла</a>
                         </li>
@@ -121,10 +110,10 @@
                         <li><a asp-area="" asp-controller="GargenPark" asp-action="Chargrills">Мангалы</a></li>
                         <li><a asp-area="" asp-controller="GargenPark" asp-action="Visors">Козырьки</a></li>
                         <li><a asp-area="" asp-controller="GargenPark" asp-action="Canopies">Навесы</a></li>
-                        
-                        
-                        
-                      
+
+
+
+
                     </ul>
                 </div>
                 <div class="col-md-9">
@@ -138,22 +127,22 @@
     </div>
 
 
-<footer style="position: absolute; bottom: 0px; width: 100%; height: 150px; display: flex; flex-direction: row; justify-content: space-around;">
-    <div class="footer-info">
-        <div class="footer-logo">ZABORPROEKT32.RU</div>
-        <div class="footer-slogan">Установка железобетонных заборов в Брянске</div>
-        <div class="footer-dates">© 2017 - 2018</div>
-    </div>
-   
-    <div class="footer-order">
-        <div class="footer-email"><i class="fa fa-envelope"></i> viktor.bubnenko@mail.ru </div>
-        <div class="footer-phone"><i class="fa fa-phone"></i> +7 910 33-11-433 </div>
-        <div class="footer-phone"><i class="fa fa-phone"></i> 370490 </div>
+    <footer style="position: absolute; bottom: 0px; width: 100%; height: 150px; display: flex; flex-direction: row; justify-content: space-around;">
+        <div class="footer-info">
+            <div class="footer-logo">ZABORPROEKT32.RU</div>
+            <div class="footer-slogan">Установка железобетонных заборов в Брянске</div>
+            <div class="footer-dates">© 2017 - 2018</div>
+        </div>
 
-        <div class="footer-link"><a asp-controller="Home" asp-action="Contact">Контакты</a></div>
-        @*<div class="footer-link"><a href="/privacy_policy/">Политика конфиденциальности</a></div>*@
-    </div>
-</footer>
+        <div class="footer-order">
+            <div class="footer-email"><i class="fa fa-envelope"></i> viktor.bubnenko@mail.ru </div>
+            <div class="footer-phone"><i class="fa fa-phone"></i> +7 910 33-11-433 </div>
+            <div class="footer-phone"><i class="fa fa-phone"></i> 370490 </div>
+
+            <div class="footer-link"><a asp-controller="Home" asp-action="Contact">Контакты</a></div>
+            @*<div class="footer-link"><a href="/privacy_policy/">Политика конфиденциальности</a></div>*@
+        </div>
+    </footer>
 
 
 
