--- a/Zabor/Views/Shared/_Layout.cshtml
+++ b/Zabor/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a style="font-family: 'Pacifico', cursive; font-size: 35px;color:cadetblue" asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Z</a>
+                <a style="font-family: 'Pacifico', cursive; font-size: 35px; color: black;" asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Z</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
