--- a/Zabor/Views/Home/Index.cshtml
+++ b/Zabor/Views/Home/Index.cshtml
@@ -75,6 +75,10 @@
         <li data-target="#carousel-example-generic" data-slide-to="1"></li>
         <li data-target="#carousel-example-generic" data-slide-to="2"></li>
         <li data-target="#carousel-example-generic" data-slide-to="3"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="5"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="6"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="7"></li>
     </ol>
 
     <!-- Wrapper for slides -->
@@ -86,24 +90,50 @@
             </div>
         </div>
         <div class="item">
-            <img src="/images/2.jpg" alt="...">
-            <div class="carousel-caption" style="color: #34425C;">
+            <img src="/images/9.jpg" alt="...">
+            <div class="carousel-caption" style="color: #2b9;">
                 Качественно установим
             </div>
         </div>
         <div class="item">
-            <img src="/images/3.jpg" alt="...">
+            <img src="/images/2.jpg" alt="...">
             <div class="carousel-caption" style="color: #34425C;">
                 Дом защитим
             </div>
         </div>
         <div class="item">
-            <img src="/images/4.jpg" alt="...">
+            <img src="/images/5.jpg" alt="...">
             <div class="carousel-caption" style="color: #2b9;">
                 Красотою удивим!
             </div>
         </div>
 
+        <div class="item">
+            <img src="/images/3.jpg" alt="...">
+            <div class="carousel-caption" style="color: #34425C;">
+                Быстро изготовим
+            </div>
+        </div>
+
+        <div class="item">
+            <img src="/images/8.jpg" alt="...">
+            <div class="carousel-caption" style="color: #2b9;">
+                Качественно установим
+            </div>
+        </div>
+        <div class="item">
+            <img src="/images/4.jpg" alt="...">
+            <div class="carousel-caption" style="color: #2b9;">
+                Дом защитим
+            </div>
+        </div>
+        
+        <div class="item">
+            <img src="/images/7.jpg" alt="...">
+            <div class="carousel-caption" style="color:  #34425C;">
+                Красотою удивим!
+            </div>
+        </div>
 
     </div>
 
