--- a/Zabor/Views/Fences/Cement.cshtml
+++ b/Zabor/Views/Fences/Cement.cshtml
@@ -125,7 +125,7 @@
                 </div>
             </div>
         </div>
-      
+
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/fencePlates/7.jpg" alt="...">
@@ -262,51 +262,51 @@
                 </div>
             </div>
         </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/images/fencePlates/17.jpg" alt="...">
-            <div class="caption">
-                <h3>Плита № 17</h3>
-                <p>Нижняя часть забора. Выполнена в стиле деревянной "плетенки".</p>
-                <p>
-                    <h3>
-                        <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                        <span title="размер" class="label label-primary">500 x 2000 мм.</span>
-                    </h3>
-                </p>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/fencePlates/17.jpg" alt="...">
+                <div class="caption">
+                    <h3>Плита № 17</h3>
+                    <p>Нижняя часть забора. Выполнена в стиле деревянной "плетенки".</p>
+                    <p>
+                        <h3>
+                            <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                            <span title="размер" class="label label-primary">500 x 2000 мм.</span>
+                        </h3>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/images/fencePlates/18.jpg" alt="...">
-            <div class="caption">
-                <h3>Плита № 18</h3>
-                <p>Верхняя часть забора. Новый вариант "Короны".</p>
-                <p>
-                    <h3>
-                        <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                        <span title="размер" class="label label-primary">660 x 2000 мм.</span>
-                    </h3>
-                </p>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/fencePlates/18.jpg" alt="...">
+                <div class="caption">
+                    <h3>Плита № 18</h3>
+                    <p>Верхняя часть забора. Новый вариант "Короны".</p>
+                    <p>
+                        <h3>
+                            <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                            <span title="размер" class="label label-primary">660 x 2000 мм.</span>
+                        </h3>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/images/fencePlates/19.jpg" alt="...">
-            <div class="caption">
-                <h3>Плита № 19</h3>
-                <p>Нижняя часть забора. Новый вариант "штакетника".</p>
-                <p>
-                    <h3>
-                        <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                        <span title="размер" class="label label-primary">450 x 2000 мм.</span>
-                    </h3>
-                </p>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/fencePlates/19.jpg" alt="...">
+                <div class="caption">
+                    <h3>Плита № 19</h3>
+                    <p>Нижняя часть забора. Новый вариант "штакетника".</p>
+                    <p>
+                        <h3>
+                            <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                            <span title="размер" class="label label-primary">450 x 2000 мм.</span>
+                        </h3>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/fencePlates/20.jpg" alt="...">
@@ -382,7 +382,7 @@
                 </div>
             </div>
         </div>
-     
+
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/fencePlates/24.jpg" alt="...">
@@ -428,36 +428,36 @@
                 </div>
             </div>
         </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/images/fencePlates/28.png" alt="...">
-            <div class="caption">
-                <h3>Плита № 28</h3>
-                <p>Укороченная нижняя часть забора. Выполнена в стиле природного камня. Используется в "каменной композиции №2"( сочетается с плитами № 26 и № 27).</p>
-                <p>
-                    <h3>
-                        <span title="цена" class="label label-success">250 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                        <span title="размер" class="label label-primary">250 x 2000 мм.</span>
-                    </h3>
-                </p>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/fencePlates/28.png" alt="...">
+                <div class="caption">
+                    <h3>Плита № 28</h3>
+                    <p>Укороченная нижняя часть забора. Выполнена в стиле природного камня. Используется в "каменной композиции №2"( сочетается с плитами № 26 и № 27).</p>
+                    <p>
+                        <h3>
+                            <span title="цена" class="label label-success">250 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                            <span title="размер" class="label label-primary">250 x 2000 мм.</span>
+                        </h3>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="col-sm-6 col-md-4">
-        <div class="thumbnail">
-            <img src="/images/fencePlates/DSC02266.png" alt="...">
-            <div class="caption">
-                <h3>Плита № 29</h3>
-                <p>Нижняя часть забора. Часто используется в сочетании с перевернутой плитой №6 ("корона")</p>
-                <p>
-                    <h3>
-                        <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                        <span title="размер" class="label label-primary">500 x 2000 мм.</span>
-                    </h3>
-                </p>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/fencePlates/DSC02266.png" alt="...">
+                <div class="caption">
+                    <h3>Плита № 29</h3>
+                    <p>Нижняя часть забора. Часто используется в сочетании с перевернутой плитой №6 ("корона")</p>
+                    <p>
+                        <h3>
+                            <span title="цена" class="label label-success">260 <i class="fa fa-rub" aria-hidden="true"></i></span>
+                            <span title="размер" class="label label-primary">500 x 2000 мм.</span>
+                        </h3>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
                 <img src="/images/fencePlates/30.jpg" alt="...">
@@ -697,7 +697,7 @@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">700 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">340х320х240 мм.</span></span>
+                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">300x450 мм.</span></span>
                         </h3>
                     </p>
                 </div>
@@ -712,7 +712,7 @@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">1000 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                            <span title="размер" class="label label-primary"><span style="font-size: 14px;">340х320х240 мм.</span></span>
+                            <span title="размер" class="label label-primary"><span style="font-size: 14px;">300x620 мм.</span></span>
                         </h3>
                     </p>
                 </div>
@@ -727,7 +727,7 @@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">150 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">340х320х240 мм.</span></span>
+                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">120x200 мм.</span></span>
                         </h3>
                     </p>
                 </div>
@@ -742,7 +742,7 @@
                     <p>
                         <h3>
                             <span title="цена" class="label label-success">180 <i class="fa fa-rub" aria-hidden="true"></i></span>
-                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">340х320х240 мм.</span></span>
+                            <span title="размер" class="label label-primary"><span style="font-size: 15px;">600x400x80 мм.</span></span>
                         </h3>
                     </p>
                 </div>
