--- a/Zabor/Views/Fences/Slave.cshtml
+++ b/Zabor/Views/Fences/Slave.cshtml
@@ -46,6 +46,21 @@
                 <img src="/images/slave/6.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/7.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/8.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/9.jpg" alt="...">
+            </div>
+        </div>
     </div>
 
 
