--- a/Zabor/Views/GargenPark/Canopies.cshtml
+++ b/Zabor/Views/GargenPark/Canopies.cshtml
@@ -47,6 +47,11 @@
                 <img src="/images/canopies/6.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/7.jpg" alt="...">
+            </div>
+        </div>
     </div>
 
 
