--- a/Zabor/Views/GargenPark/Visors.cshtml
+++ b/Zabor/Views/GargenPark/Visors.cshtml
@@ -38,6 +38,11 @@
                 <img src="/images/visors/4.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/visors/5.jpg" alt="...">
+            </div>
+        </div>
     </div>
 
 
