--- a/Zabor/Views/Products/Forge.cshtml
+++ b/Zabor/Views/Products/Forge.cshtml
@@ -71,6 +71,21 @@
                 <img src="/images/forge/6.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/7.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/8.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/9.jpg" alt="...">
+            </div>
+        </div>
     </div>
 
 
