--- a/Zabor/Views/Products/Gates.cshtml
+++ b/Zabor/Views/Products/Gates.cshtml
@@ -104,6 +104,36 @@
                 <img src="/images/gates/17.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/18.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/19.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/20.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/21.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/22.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/23.jpg" alt="...">
+            </div>
+        </div>
 
     </div>
 
