--- a/Zabor/Views/Fences/SheetMetal.cshtml
+++ b/Zabor/Views/Fences/SheetMetal.cshtml
@@ -47,7 +47,7 @@
                 <img src="/images/sheetMetal/6.jpg" alt="...">
             </div>
         </div>
-        
+
 
         <div class="col-sm-6 col-md-4">
             <div class="thumbnail">
@@ -84,9 +84,55 @@
                 <img src="/images/sheetMetal/13.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/14.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/15.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/16.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/17.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/18.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/19.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/20.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/21.jpg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/22.jpg" alt="...">
+            </div>
+        </div>
     </div>
+   
 
-  
+
 
 
 
