--- a/Zabor/Views/Products/Gates.cshtml
+++ b/Zabor/Views/Products/Gates.cshtml
@@ -134,6 +134,11 @@
                 <img src="/images/gates/23.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/24.jpg" alt="...">
+            </div>
+        </div>
 
     </div>
 
