--- a/Zabor/Views/Fences/SheetMetal.cshtml
+++ b/Zabor/Views/Fences/SheetMetal.cshtml
@@ -129,6 +129,26 @@
                 <img src="/images/sheetMetal/22.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/23.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/24.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/25.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/sheetMetal/26.jpeg" alt="...">
+            </div>
+        </div>
     </div>
    
 
