--- a/Zabor/Views/Fences/Slave.cshtml
+++ b/Zabor/Views/Fences/Slave.cshtml
@@ -61,6 +61,26 @@
                 <img src="/images/slave/9.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/10.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/11.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/12.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/slave/13.jpeg" alt="...">
+            </div>
+        </div>
     </div>
 
 
