--- a/Zabor/Views/GargenPark/Canopies.cshtml
+++ b/Zabor/Views/GargenPark/Canopies.cshtml
@@ -52,6 +52,21 @@
                 <img src="/images/canopies/7.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/8.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/9.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/canopies/10.jpeg" alt="...">
+            </div>
+        </div>
     </div>
 
 
