--- a/Zabor/Views/Products/Forge.cshtml
+++ b/Zabor/Views/Products/Forge.cshtml
@@ -86,6 +86,11 @@
                 <img src="/images/forge/9.jpg" alt="...">
             </div>
         </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/forge/10.jpeg" alt="...">
+            </div>
+        </div>
     </div>
 
 
