--- a/Zabor/Views/Products/Gates.cshtml
+++ b/Zabor/Views/Products/Gates.cshtml
@@ -139,6 +139,27 @@
                 <img src="/images/gates/24.jpg" alt="...">
             </div>
         </div>
+        
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/25.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/26.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/27.jpeg" alt="...">
+            </div>
+        </div>
+        <div class="col-sm-6 col-md-4">
+            <div class="thumbnail">
+                <img src="/images/gates/28.jpeg" alt="...">
+            </div>
+        </div>
 
     </div>
 
